--- a/haxe-watch/Dockerfile
+++ b/haxe-watch/Dockerfile
@@ -11,3 +11,5 @@ RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
 		apt-get install -y nodejs && \
 		npm install -g chokidar-cli && \
 		rm -rf /var/lib/apt/lists/*
+
+ENV SHELL=/bin/bash
