--- a/livereloadx/Dockerfile
+++ b/livereloadx/Dockerfile
@@ -9,3 +9,5 @@ MAINTAINER dion@transition9.com
 RUN apk add --no-cache make gcc g++ python linux-headers udev && \
 	npm install -g livereloadx && \
 	apk del make gcc g++ python linux-headers udev
+
+EXPOSE 35729
