--- a/haxe-watch/Dockerfile
+++ b/haxe-watch/Dockerfile
@@ -14,6 +14,9 @@ MAINTAINER dion@transition9.com
 
 ENV SHELL=/bin/bash
 
+#Sometimes you want a port exposed (e.g. for reverse docker nginx proxying)
+EXPOSE 9000
+
 RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
 		apt-get install -y nodejs rsync && \
 		npm install -g chokidar-cli nodemon webpack browserify && \
