--- a/haxe-watch/Dockerfile
+++ b/haxe-watch/Dockerfile
@@ -14,11 +14,12 @@ MAINTAINER dion@transition9.com
 
 ENV SHELL=/bin/bash
 
-#Sometimes you want a port exposed (e.g. for reverse docker nginx proxying)
-EXPOSE 9000
-
 RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
 		apt-get install -y nodejs rsync && \
 		npm install -g chokidar-cli nodemon webpack browserify && \
 		rm -rf /var/lib/apt/lists/*
 
+
+#Sometimes you want a port exposed (e.g. for reverse docker nginx proxying)
+EXPOSE 9000
+ENV PORT 9000
