aws lambda docs

--- a/aws-lambda-builder/Dockerfile
+++ b/aws-lambda-builder/Dockerfile
@@ -1,7 +1,9 @@
 # Description:
 #
 # To build aws nodejs lambdas you need a build environment
-# package up the scripts
+# to package up the scripts in a zip file for uploading
+# to AWS. This image provides an AWS linux environment
+# for this task.
 #
 
 FROM amazonlinux:2016.09
