Added script for actual packaging lambdas

--- a/aws-lambda-builder/Dockerfile
+++ b/aws-lambda-builder/Dockerfile
@@ -5,6 +5,11 @@
 # to AWS. This image provides an AWS linux environment
 # for this task.
 #
+# Usage:
+# (Assumes the nodejs source and package.json is in the ./src folder and
+#  the artifacts should go in the ./destination folder)
+# docker run --rm -ti -v $PWD/src:/src -v $PWD/src:/destination -w /src dionjwa/aws-lambda-builder -s /src -d /destination
+#
 
 FROM amazonlinux:2016.09
 
@@ -24,3 +29,6 @@ RUN mkdir /tmp/docker-build && \
   rm -rf /var/cache/yum/* && \
   rm -rf /tmp/* && \
   rm -rf /var/tmp/*
+
+ADD package-aws-lambda.sh /bin/package-aws-lambda.sh
+ENTRYPOINT ["/bin/bash", "/bin/package-aws-lambda.sh"]
